// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching source clusters is pending 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": true,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching source clusters is rejected 1`] = `
Object {
  "errorSourceClusters": "error",
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": true,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching source clusters is successful, and there is data 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [
    Object {
      "0": Object {
        "created_on": "2016-07-15T18:28:16Z",
        "drs_automation_level": null,
        "drs_enabled": null,
        "drs_migration_threshold": null,
        "effective_cpu": null,
        "effective_memory": null,
        "ems_id": "10000000000012",
        "ems_ref": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ems_ref_obj": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ext_management_system": Object {
          "emstype": "vmwarews",
        },
        "ha_admit_control": null,
        "ha_enabled": null,
        "ha_max_failures": null,
        "href": "http://localhost:3000/api/clusters/10000000000001",
        "id": "1",
        "last_perf_capture_on": null,
        "name": "VMWare Cluster1",
        "type": null,
        "uid_ems": "00000002-0002-0002-0002-00000000024b",
        "updated_on": "2016-07-15T18:28:16Z",
        "v_parent_datacenter": "Datacenter",
      },
      "1": Object {
        "created_on": "2016-07-15T18:28:16Z",
        "drs_automation_level": null,
        "drs_enabled": null,
        "drs_migration_threshold": null,
        "effective_cpu": null,
        "effective_memory": null,
        "ems_id": "10000000000012",
        "ems_ref": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ems_ref_obj": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ext_management_system": Object {
          "emstype": "vmwarews",
        },
        "ha_admit_control": null,
        "ha_enabled": null,
        "ha_max_failures": null,
        "href": "http://localhost:3000/api/clusters/10000000000002",
        "id": "2",
        "last_perf_capture_on": null,
        "name": "VMWare Cluster2",
        "type": null,
        "uid_ems": "00000002-0002-0002-0002-00000000024b",
        "updated_on": "2016-07-15T18:28:16Z",
        "v_parent_datacenter": "Datacenter",
      },
      "2": Object {
        "created_on": "2016-07-15T18:28:16Z",
        "drs_automation_level": null,
        "drs_enabled": null,
        "drs_migration_threshold": null,
        "effective_cpu": null,
        "effective_memory": null,
        "ems_id": "10000000000012",
        "ems_ref": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ems_ref_obj": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ext_management_system": Object {
          "emstype": "vmwarews",
        },
        "ha_admit_control": null,
        "ha_enabled": null,
        "ha_max_failures": null,
        "href": "http://localhost:3000/api/clusters/10000000000003",
        "id": "3",
        "last_perf_capture_on": null,
        "name": "VMWare Cluster3",
        "type": null,
        "uid_ems": "00000002-0002-0002-0002-00000000024b",
        "updated_on": "2016-07-15T18:28:16Z",
        "v_parent_datacenter": "Datacenter",
      },
    },
  ],
  "targetClusters": Array [],
}
`;

exports[`fetching source clusters is successful, and there is no data 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching target clusters is pending 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": true,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching target clusters is rejected 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": "error",
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": true,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching target clusters is successful, and there is data 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [
    Object {
      "0": Object {
        "created_on": "2016-08-03T02:19:35Z",
        "drs_automation_level": "fullyAutomated",
        "drs_enabled": false,
        "drs_migration_threshold": 3,
        "effective_cpu": 109356,
        "effective_memory": 789977235456,
        "ems_id": "10000000000007",
        "ems_ref": "domain-c7",
        "ems_ref_obj": "domain-c7",
        "ext_management_system": Object {
          "emstype": "rhevm",
        },
        "ha_admit_control": true,
        "ha_enabled": false,
        "ha_max_failures": 1,
        "href": "http://localhost:3000/api/clusters/10000000000006",
        "id": "1",
        "last_perf_capture_on": null,
        "name": "RHV Cluster1",
        "type": null,
        "uid_ems": "domain-c7",
        "updated_on": "2017-02-26T02:33:43Z",
        "v_parent_datacenter": "Default",
      },
      "1": Object {
        "created_on": "2016-08-03T02:19:35Z",
        "drs_automation_level": "fullyAutomated",
        "drs_enabled": false,
        "drs_migration_threshold": 3,
        "effective_cpu": 109356,
        "effective_memory": 789977235456,
        "ems_id": "10000000000008",
        "ems_ref": "domain-c7",
        "ems_ref_obj": "domain-c7",
        "ext_management_system": Object {
          "emstype": "rhevm",
        },
        "ha_admit_control": true,
        "ha_enabled": false,
        "ha_max_failures": 1,
        "href": "http://localhost:3000/api/clusters/10000000000007",
        "id": "2",
        "last_perf_capture_on": null,
        "name": "RHV Cluster2",
        "type": null,
        "uid_ems": "domain-c7",
        "updated_on": "2017-02-26T02:33:43Z",
        "v_parent_datacenter": "Default",
      },
    },
  ],
}
`;

exports[`fetching target clusters is successful, and there is no data 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`sets default state 1`] = `
Object {
  "errorHostsQuery": null,
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "hostsByClusterID": Object {},
  "isFetchingHostsQuery": false,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedHostsQuery": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;
